<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HypeChats</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="dont_have_account">Don\'t have account? Register</string>
    <string name="avatar">User Avatar</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="loading">Loading...</string>
    <string name="no_data">No data available</string>
</resources>